# rcpparrayfire

./: .Rbuildignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  404.html  ChangeLog  DESCRIPTION  LICENSE-text.html  NAMESPACE  NEWS.md  README.md  authors.html  cleanup  configure  configure.ac  index.html  opencl-beignet.df  pkgdown.yml
.travis/: before_install_linux.sh  before_install_osx.sh
R/: RcppArrayFire-package.R  RcppArrayFire.package.skeleton.R  RcppArrayFire.package.skelton.R  RcppExports.R  RcppFire.package.skelton.R  flags.R.in  inline.R
articles/: RcppArrayFire.html  index.html  tests_and_coverage.html
docs/: LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml
docs/articles/: RcppArrayFire.html  index.html
docs/news/: index.html
docs/reference/: RcppArrayFire-package.html  RcppArrayFire.package.skeleton.html  arrayfire_count_device.html  arrayfire_device_info.html  arrayfire_get_active_backend.html  arrayfire_get_available_backends.html  arrayfire_get_device.html  arrayfire_get_seed.html  arrayfire_info.html  arrayfire_set_backend.html  arrayfire_set_device.html  arrayfire_set_seed.html  fastLmPure.html  fastRnorm.html  fastRunif.html  index.html
inst/examples/: arrayDims.R  backends.R  devices.R  rng.R
inst/include/: RcppArrayFire.h  RcppArrayFireAs.h  RcppArrayFireForward.h  RcppArrayFireWrap.h  RcppFire.h  RcppFireAs.h  RcppFireForward.h  RcppFireWrap.h
inst/skeleton/: Makevars.in  configure  rcpparrayfire_hello_world.Rd  rcpparrayfire_hello_world.cpp  rcppfire_hello_world.Rd  rcppfire_hello_world.cpp
inst/skelton/: rcppfire_hello_world.Rd  rcppfire_hello_world.cpp
man/: RcppArrayFire-package.Rd  RcppArrayFire.package.skeleton.Rd  RcppFire-package.Rd  arrayfire_count_device.Rd  arrayfire_device_info.Rd  arrayfire_device_prop.Rd  arrayfire_get_active_backend.Rd  arrayfire_get_available_backends.Rd  arrayfire_get_device.Rd  arrayfire_get_seed.Rd  arrayfire_info.Rd  arrayfire_set_backend.Rd  arrayfire_set_device.Rd  arrayfire_set_seed.Rd  fastLmPure.Rd  fastRnorm.Rd  fastRunif.Rd
news/: index.html
reference/: RcppArrayFire-package.html  RcppArrayFire.package.skeleton.html  arrayfire_count_device.html  arrayfire_device_info.html  arrayfire_get_active_backend.html  arrayfire_get_available_backends.html  arrayfire_get_device.html  arrayfire_get_seed.html  arrayfire_info.html  arrayfire_set_backend.html  arrayfire_set_device.html  arrayfire_set_seed.html  fastLmPure.html  fastRnorm.html  fastRunif.html  index.html
src/: Makevars  Makevars.in  RcppArrayFire.cpp  RcppArrayFireAs.cpp  RcppArrayFireWrap.cpp  RcppExports.cpp  RcppFire.cpp  RcppFireWrap.cpp  fastLm.cpp  fastRNG.cpp
tests/: fastLm.R  rng.R  testthat.R
tests/testthat/: test-exporter-wrap-sparse.R  test-fastLm.R  test-general.R  test-inline-dims.R  test-rng.R
vignettes/: RcppArrayFire-introduction.Rmd  RcppArrayFire.Rmd
